# TADPREP

./: LICENSE  README.md  data_prep_workflow.md  dev_test.py  pyproject.toml  requirements.txt
data/: sample_data.csv  sample_data_longlean.csv  sample_data_minimal.csv  sample_data_reduced.csv  sample_data_sparse.csv
docs/: PyPi_prep.md  data_prep_workflow.md  method_tuning.md
src/: tadpreps.py
src/tadprep/: __init__.py  package.py  tadprep_interactive.py
src/tadprep/core/: __init__.py  transforms.py
src/tadpreps/: __init__.py  tadpreps_interactive.py
src/tadpreps/core/: transforms.py
test_output/: sample_data_test_1.csv  sample_data_test_2.csv  sample_data_test_3.csv  test_data_excel.xlsx  test_data_json.json  test_data_pkl.pkl
