[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'tadprep'
version = '0.1.0b1'
description = 'Interactive Tabular Data Preparation Library'
readme = 'README.md'
authors = [{ name = 'Donald Smith', email = 'don.cs.smith@gmail.com' }]
maintainers = [{ name = 'Donald Smith', email = 'don.cs.smith@gmail.com' }]
contributors = [{ name = 'Gabor Horvath', email = 'gabor_email@service.com' }]
license = { file = 'LICENSE' }
requires-python = '>=3.12'
dependencies = [
    'numpy>=1.24.0',  # For array operations and 'inf' checks
    'pandas>=2.0.0',  # Used extensively for dataframe manipulations
    'scikit-learn>=1.3.0',  # Supplies scalers for numerical features
    'matplotlib>=3.7.0',  # For basic plotting
    'seaborn>=0.12.0',  # For generating feature distribution plots
    'pyarrow>=1.3.0',  # Required for pandas parquet support
    'scipy>=1.15.1'
]

[project.urls]
Repository = 'https://github.com/don-c-smith/TADPREP'

[project.scripts]
tadprep = 'tadprep:main'

[tool.hatch.build.targets.wheel]
packages = ['src/tadprep']